// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with 0 expenses correctly 1`] = `
<div>
  <h2>
    Total:
  </h2>
  <p>
    Viewing 0 expenses totaling $0.00
  </p>
</div>
`;

exports[`should render ExpenseSummary with multiple expenses correctly 1`] = `
<div>
  <h2>
    Total:
  </h2>
  <p>
    Viewing 3 expenses totaling $1,141.95
  </p>
</div>
`;
